# ascii-img

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  bug_report.yml
.github/workflows/: cargo-build-test.yml  cd.yml
ascii-img/: Cargo.toml
ascii-img-cli/: Cargo.toml  README.md
ascii-img-cli/src/: cli.rs  main.rs
ascii-img/src/: ascii_renderer.rs  lib.rs  renderer.rs
ascii-img/src/renderer/: ansi.rs  ansi256.rs  ascii.rs  common.rs  mod.rs  unicode.rs
