[package]
name = "ascii-img-cli"
version = "0.1.5"
edition = "2018"
description = "Command-line tool for using ascii-img"
license = "MPL-2.0"
authors = ["4yman-0"]
documentation = "https://docs.rs/ascii-img-cli"
homepage = "https://crates.io/crates/ascii-img-cli"
repository = "https://github.com/4yman-0/ascii-img"

[features]
default = [
	"image/png",
	"image/jpeg",
	"image/webp",
	"image/bmp",
	"image/gif",
]
avif = ["image/avif-native"]
bmp = ["image/bmp"]
gif = ["image/gif"]
hdr = ["image/hdr"]
ico = ["image/ico"]
jpeg = ["image/jpeg"]
png = ["image/png"]
tiff = ["image/tiff"]
webp = ["image/webp"]

[dependencies]
ascii-img = { version = "0.3.0", path = "../ascii-img", features = ["rayon"] }
clap = { version = "4.5.31", features = ["derive"] }
image = { version = "0.25.5", default-features = false }
