[package]
name = "ascii-img"
version = "0.2.0"
edition = "2024"
description = "Convert images to ASCII"
license = "MPL-2.0"
authors = ["4yman-0"]
documentation = "https://docs.rs/ascii-img"
homepage = "https://crates.io/crates/ascii-img"
repository = "https://github.com/4yman-0/ascii-img"
readme = "../README.md"

[features]
default = ["ansi-renderer", "ansi256-renderer", "unicode-renderer"]
ansi-renderer = ["dep:ansi_term"]
ansi256-renderer = ["dep:ansi_term", "dep:ansi_colours"]
unicode-renderer = []
parallel = ["image/rayon"]
ansi_colours = ["dep:ansi_colours"]

[dependencies]
ansi_colours = { version = "1.2.3", optional = true, features = ["ansi_term"] }
ansi_term = { version = "0.12.1", optional = true }
image = { version = "0.25.5", default-features = false }
